Change header, Add band members, Fix navbar-header

--- a/tsa_band_website/index.html
+++ b/tsa_band_website/index.html
@@ -14,14 +14,19 @@
     <title>Cardboard Fantasy</title>
   </head>
 
-  <header>
-      <nav class="navbar fixed-top navbar-expand-md justify-content-center">
-        <p class="navbar-brand">Cover</p>
-        <a class="nav-link active" href="#">Link1</a>
-        <a class="nav-link" href="#">Link2</a>
-        <a class="nav-link" href="#">Link3</a>
-      </nav>
-  </header>
+  
+       <nav class="navbar fixed-top navbar-expand-md justify-content-center">
+         <div class="container-fluid">
+           <div class="navbar-header">
+             <p class="navbar-brand">Cover</p>
+           </div>
+   
+           <a class="nav-link" href="#">Link1</a>
+           <a class="nav-link" href="#">Link2</a>
+           <a class="nav-link" href="#">Link3</a>
+         </div>
+       </nav>
+
 
   <body class="text-center">
     <!-- cover -->
@@ -47,75 +52,51 @@
       </footer>
     </div>
 
-    <!-- these are copied from the carousel example -->
-    <div class="container marketing">
+    <div class="container text-center">
+      <h2>CARDBOARD FANTASY</h2>
+      <p><em>music is best thing</em></p>
+      <p>This band is the best band in the history of all bands. You can't change my mind.</p
+    </div>
 
-      <!-- Three columns of text below the carousel -->
+    <hr class="featurette-divider">
+
+    <div class="container text-center marketing">
+      <h3>MEET THE BAND</h3>
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-3">
           <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-      </div><!-- /.row -->
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2>Seth "Rockstar" Savage</h2>
+          <p>Cool Dood 5/7 Too Much Water</p>
         </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+        <div class="col-lg-3">
+          <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          <h2>Jeremy "Turns in his transcript late" Knox</h2>
+          <p>Do ur gosh darn homework, Jeormoy KNix</p>
+        </div>
+        <div class="col-lg-3">
+          <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          <h2>M.T. Space</h2>
+          <em>only at target</em>
+        </div>
+        <div class="col-lg-3">
+          <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          <h2>M.T. Space</h2>
+          <em>nowyouhaveafriendinthediamondbuisness</em>
         </div>
       </div>
 
-      <hr class="featurette-divider">
+      <p>YEAH! LOOK AT US. WE"RE A BAND. YEAH WE <em>BAND</em> TOGETHER. HUEHUEHUE. ALSO WE LUV MUSICO</p> 
+    </div>
+        
 
-      <div class="row featurette">
-        <div class="col-md-7 order-md-2">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5 order-md-1">
-          <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-        </div>
+    <hr class="featurette-divider">
+
+
+    <footer class="mastfoot mt-auto">
+      <div class="inner">
+        <p>Icons made by <a href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
       </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-
-      <footer class="mastfoot mt-auto">
-        <div class="inner">
-          <p>Icons made by <a href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
-        </div>
-      </footer>
+    </footer>
 
     <!-- bootstrap js -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
