Add some content. Make a funky store page. IDK What else.
- Feel free to git blame me.

--- a/tsa_band_website/index.html
+++ b/tsa_band_website/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- bootstrap css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/stylesheet.css">
+    <link rel="stylesheet" href="styles/index.css">
     <link rel="icon" href="assets/favicon.png">
 
     <script src="scripts/jquery.min.js" charset="utf-8"></script>
@@ -14,20 +14,16 @@
     <title>Cardboard Fantasy</title>
   </head>
 
-  
-       <nav class="navbar fixed-top navbar-expand-md justify-content-center">
-         <div class="container-fluid">
-           <div class="navbar-header">
-             <p class="navbar-brand">Cover</p>
-           </div>
-   
-           <a class="nav-link" href="#">Link1</a>
-           <a class="nav-link" href="#">Link2</a>
-           <a class="nav-link" href="#">Link3</a>
-         </div>
-       </nav>
-
-
+  <nav class="navbar fixed-top navbar-expand-md justify-content-center">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <p class="navbar-brand">Cover</p>
+      </div>
+      <a class="nav-link" href="#">Link1</a>
+      <a class="nav-link" href="#">Link2</a>
+      <a class="nav-link" href="pages\store.html">Store</a>
+    </div>
+  </nav>
   <body class="text-center">
     <!-- cover -->
 
@@ -64,33 +60,97 @@
       <h3>MEET THE BAND</h3>
       <div class="row">
         <div class="col-lg-3">
-          <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          <img class="rounded-circle" src="https://www.wikihow.com/images/thumb/b/bf/Get-a-Good-Boyfriend-Step-7.jpeg/aid514394-v4-728px-Get-a-Good-Boyfriend-Step-7.jpeg" alt="Generic placeholder image" width="140" height="140">
           <h2>Seth "Rockstar" Savage</h2>
           <p>Cool Dood 5/7 Too Much Water</p>
         </div>
         <div class="col-lg-3">
-          <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          <img class="rounded-circle" src="https://www.wikihow.com/images/thumb/b/bf/Get-a-Good-Boyfriend-Step-7.jpeg/aid514394-v4-728px-Get-a-Good-Boyfriend-Step-7.jpeg" alt="Generic placeholder image" width="140" height="140">
           <h2>Jeremy "Turns in his transcript late" Knox</h2>
           <p>Do ur gosh darn homework, Jeormoy KNix</p>
         </div>
         <div class="col-lg-3">
-          <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>M.T. Space</h2>
+          <img class="rounded-circle" src="https://www.wikihow.com/images/thumb/b/bf/Get-a-Good-Boyfriend-Step-7.jpeg/aid514394-v4-728px-Get-a-Good-Boyfriend-Step-7.jpeg" alt="Generic placeholder image" width="140" height="140">
+          <h2>Kayla Something</h2>
           <em>only at target</em>
         </div>
         <div class="col-lg-3">
-          <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>M.T. Space</h2>
+          <img class="rounded-circle" src="https://www.wikihow.com/images/thumb/b/bf/Get-a-Good-Boyfriend-Step-7.jpeg/aid514394-v4-728px-Get-a-Good-Boyfriend-Step-7.jpeg" alt="Generic placeholder image" width="140" height="140">
+          <h2>Dylan Something</h2>
           <em>nowyouhaveafriendinthediamondbuisness</em>
         </div>
       </div>
 
-      <p>YEAH! LOOK AT US. WE"RE A BAND. YEAH WE <em>BAND</em> TOGETHER. HUEHUEHUE. ALSO WE LUV MUSICO</p> 
+      <p>YEAH! LOOK AT US. WE"RE A BAND. YEAH WE <em>BAND</em> TOGETHER. HUEHUEHUE. ALSO WE LUV MUSICO</p>
     </div>
-        
+
 
     <hr class="featurette-divider">
 
+
+
+    <h1>Upcoming Tours</h1>
+      <div class="d-flex justify-content-center">
+        <div class="row mb-2">
+          <div class="col-md-6">
+            <div class="card flex-md-row h-md-250">
+              <div class="card-body">
+                <h2>Dubai</h2>
+                <p class="card-text">
+                  HelloTHere. Buyt htis
+                </p>
+                <a href="#">BUY NOW</a>
+              </div>
+              <img alt="" src="https://www.wikihow.com/images/thumb/b/bf/Get-a-Good-Boyfriend-Step-7.jpeg/aid514394-v4-728px-Get-a-Good-Boyfriend-Step-7.jpeg" style="width: 200px; height: 250px;" class="card-img-right flex-auto d-none d-md-block" data-holder-rendered="true" />
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card flex-md-row h-md-250">
+              <div class="card-body">
+                <h2>Murfreesboro</h2>
+                <p class="card-text">
+                  HelloTHere. Buyt htis
+                </p>
+                <a href="#">BUY NOW</a>
+              </div>
+              <img alt="" src="https://www.wikihow.com/images/thumb/b/bf/Get-a-Good-Boyfriend-Step-7.jpeg/aid514394-v4-728px-Get-a-Good-Boyfriend-Step-7.jpeg" style="width: 200px; height: 250px;" class="card-img-right flex-auto d-none d-md-block" data-holder-rendered="true" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="d-flex justify-content-center">
+        <div class="row mb-2">
+          <div class="col-md-6">
+            <div class="card flex-md-row h-md-250">
+              <div class="card-body">
+                <h2>New York</h2>
+                <p class="card-text">
+                  HelloTHere. Buyt htis
+                </p>
+                <a href="#">BUY NOW</a>
+              </div>
+              <img alt="" src="https://www.wikihow.com/images/thumb/b/bf/Get-a-Good-Boyfriend-Step-7.jpeg/aid514394-v4-728px-Get-a-Good-Boyfriend-Step-7.jpeg" style="width: 200px; height: 250px;" class="card-img-right flex-auto d-none d-md-block" data-holder-rendered="true" />
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card flex-md-row h-md-250">
+              <div class="card-body">
+                <h2>France</h2>
+                <p class="card-text">
+                  HelloTHere. Buyt htis
+                </p>
+                <a href="#">BUY NOW</a>
+              </div>
+              <img alt="" src="https://www.wikihow.com/images/thumb/b/bf/Get-a-Good-Boyfriend-Step-7.jpeg/aid514394-v4-728px-Get-a-Good-Boyfriend-Step-7.jpeg" style="width: 200px; height: 250px;" class="card-img-right flex-auto d-none d-md-block" data-holder-rendered="true" />
+            </div>
+          </div>
+        </div>
+      </div>
+  </body>
+
+
+  <hr class="featurette-divider" />
 
     <footer class="mastfoot mt-auto">
       <div class="inner">
