--- a/tsa_band_website/pages/store.html
+++ b/tsa_band_website/pages/store.html
@@ -20,7 +20,6 @@
     <title>Cardboard Fantasy Official Store</title>
   </head>
 
-
   <nav class="navbar fixed-top navbar-expand-md justify-content-center">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -33,10 +32,6 @@
   </nav>
 
   <body>
-    <div class="jumbotron store-background" >
-      <h1>Storefront</h1>
-    </div>
-
 
       <div id="tsaCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -94,7 +89,8 @@
       <div class="d-flex justify-content-center">
         <div class="row mb-2">
           <div class="col-md-6">
-            <div class="card flex-md-row h-md-250">
+            <div class="card">
+              <img alt="" src="https://www.wikihow.com/images/thumb/b/bf/Get-a-Good-Boyfriend-Step-7.jpeg/aid514394-v4-728px-Get-a-Good-Boyfriend-Step-7.jpeg" style="width: 18rem; height: 250px;" class="card-img-top flex-auto d-none d-md-block" data-holder-rendered="true" />
               <div class="card-body">
                 <h2>Hellow</h2>
                 <p class="card-text">
@@ -102,11 +98,11 @@
                 </p>
                 <a href="#">BUY NOW</a>
               </div>
-              <img alt="" src="https://www.wikihow.com/images/thumb/b/bf/Get-a-Good-Boyfriend-Step-7.jpeg/aid514394-v4-728px-Get-a-Good-Boyfriend-Step-7.jpeg" style="width: 200px; height: 250px;" class="card-img-right flex-auto d-none d-md-block" data-holder-rendered="true" />
             </div>
           </div>
           <div class="col-md-6">
-            <div class="card flex-md-row h-md-250">
+            <div class="card h-md-250">
+              <img alt="" src="https://www.wikihow.com/images/thumb/b/bf/Get-a-Good-Boyfriend-Step-7.jpeg/aid514394-v4-728px-Get-a-Good-Boyfriend-Step-7.jpeg" style="width: 18rem; height: 250px;" class="card-img-top flex-auto d-none d-md-block" data-holder-rendered="true" />
               <div class="card-body">
                 <h2>Hellow</h2>
                 <p class="card-text">
@@ -114,7 +110,6 @@
                 </p>
                 <a href="#">BUY NOW</a>
               </div>
-              <img alt="" src="https://www.wikihow.com/images/thumb/b/bf/Get-a-Good-Boyfriend-Step-7.jpeg/aid514394-v4-728px-Get-a-Good-Boyfriend-Step-7.jpeg" style="width: 200px; height: 250px;" class="card-img-right flex-auto d-none d-md-block" data-holder-rendered="true" />
             </div>
           </div>
         </div>
@@ -123,7 +118,8 @@
       <div class="d-flex justify-content-center">
         <div class="row mb-2">
           <div class="col-md-6">
-            <div class="card flex-md-row h-md-250">
+            <div class="card h-md-260">
+              <img alt="" src="https://www.wikihow.com/images/thumb/b/bf/Get-a-Good-Boyfriend-Step-7.jpeg/aid514394-v4-728px-Get-a-Good-Boyfriend-Step-7.jpeg" style="width: 18rem; height: 250px;" class="card-img-top flex-auto d-none d-md-block" data-holder-rendered="true" />
               <div class="card-body">
                 <h2>Hellow</h2>
                 <p class="card-text">
@@ -131,11 +127,11 @@
                 </p>
                 <a href="#">BUY NOW</a>
               </div>
-              <img alt="" src="https://www.wikihow.com/images/thumb/b/bf/Get-a-Good-Boyfriend-Step-7.jpeg/aid514394-v4-728px-Get-a-Good-Boyfriend-Step-7.jpeg" style="width: 200px; height: 250px;" class="card-img-right flex-auto d-none d-md-block" data-holder-rendered="true" />
             </div>
           </div>
           <div class="col-md-6">
-            <div class="card flex-md-row h-md-250">
+            <div class="card h-md-260">
+              <img alt="" src="https://www.wikihow.com/images/thumb/b/bf/Get-a-Good-Boyfriend-Step-7.jpeg/aid514394-v4-728px-Get-a-Good-Boyfriend-Step-7.jpeg" style="width: 18rem; height: 250px;" class="card-img-top flex-auto d-none d-md-block" data-holder-rendered="true" />
               <div class="card-body">
                 <h2>Hellow</h2>
                 <p class="card-text">
@@ -143,29 +139,10 @@
                 </p>
                 <a href="#">BUY NOW</a>
               </div>
-              <img alt="" src="https://www.wikihow.com/images/thumb/b/bf/Get-a-Good-Boyfriend-Step-7.jpeg/aid514394-v4-728px-Get-a-Good-Boyfriend-Step-7.jpeg" style="width: 200px; height: 250px;" class="card-img-right flex-auto d-none d-md-block" data-holder-rendered="true" />
             </div>
           </div>
         </div>
       </div>
-    </div>
-
-    <hr class="featurette-divider" />
-
-    <div class="container">
-      <ul class="list-group">
-        <li style="color:black;" class="list-group-item">thing1</li>
-      </ul>
-      <ul class="list-group">
-        <li style="color:black;" class="list-group-item">thing2</li>
-      </ul>
-      <ul class="list-group">
-        <li style="color:black;" class="list-group-item">thing3</li>
-      </ul>
-      <ul class="list-group">
-        <li style="color:black;" class="list-group-item">thing4</li>
-      </ul>
-
     </div>
 
     <hr class="featurette-divider" />
